tests/fixtures/invalid/ascii_2_args.py
# ascii() takes at most 1 argument, got 2
x = ascii(1, 1)
